# fasthtmx

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
services/: db_service.py
templates/home/: index.html
